--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
+		<!-- JPA -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 
 		<!-- 하위 4개 : token 발행을 위한 라이브러리-->
 		<dependency>
@@ -65,6 +70,7 @@
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>3.0.0</version><!--마이바티스는 스프링 부트에서는 높은 확률로 version을 지정해줘야함-->
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
