--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.datasource.password=
 
 # SQL문이 있는 위치 설정(mybatis)
 # 이름이 Mapper로 끝나는 모든 xml 파일을 의미
-mybatis.mapper-locations=classpath:/mappers/*Mapper.xml
+mybatis.mapper-locations=classpath:/mappers/*/*Mapper.xml
 
 # dto 위치 설정
 mybatis.type-aliases-package=com.example.dto
