--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
 	</properties>
 	<dependencies>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+	
+
 		<!-- 하위 4개 : token 발행을 위한 라이브러리-->
 		<dependency>
 			<groupId>jakarta.xml.bind</groupId>
