--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ server.servlet.context-path=/SOBUN
 # 뷰의 위치 설정 및 확장자 인식
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+spring.thymeleaf.servlet.produce-partial-output-while-processing=false
 
 # DB 연동
 spring.datasource.driver-class-name=org.h2.Driver
