--- a/src/main/resources/static/erd/miniproject2_0.16.vuerd.json
+++ b/src/main/resources/static/erd/miniproject2_0.16.vuerd.json
@@ -3,8 +3,8 @@
     "version": "2.2.11",
     "width": 3000,
     "height": 3000,
-    "scrollTop": -757.8333311147182,
-    "scrollLeft": -299.9999880790764,
+    "scrollTop": -598.8333311147182,
+    "scrollLeft": -380.9999880790764,
     "zoomLevel": 0.9,
     "show": {
       "tableComment": true,
@@ -706,7 +706,7 @@
           "active": false,
           "left": 885.8698,
           "top": 812.6788,
-          "zIndex": 102,
+          "zIndex": 13,
           "widthName": 60,
           "widthComment": 60,
           "color": "#FF9F9C"
@@ -1257,7 +1257,7 @@
           "active": false,
           "left": 879.8682,
           "top": 535.9039,
-          "zIndex": 14,
+          "zIndex": 11,
           "widthName": 89.24853515625,
           "widthComment": 60,
           "color": "#E96161"
@@ -2209,7 +2209,7 @@
           "active": false,
           "left": 309.8274,
           "top": 1199.2716,
-          "zIndex": 57,
+          "zIndex": 12,
           "widthName": 60,
           "widthComment": 60,
           "color": "#ECC1F3"
@@ -2453,10 +2453,10 @@
           }
         ],
         "ui": {
-          "active": true,
+          "active": false,
           "left": 292.1879,
           "top": 800.1737,
-          "zIndex": 106,
+          "zIndex": 15,
           "widthName": 60,
           "widthComment": 60,
           "color": "#D28BFF"
@@ -2519,7 +2519,7 @@
           "active": false,
           "left": 970.5785,
           "top": 1145.287,
-          "zIndex": 103,
+          "zIndex": 14,
           "widthName": 60,
           "widthComment": 60,
           "color": "#607D8B"
