--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ server.servlet.context-path=/SOBUN
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
+spring.thymeleaf.servlet.produce-partial-output-while-processing=false
+
 # DB 연동
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:tcp://1.234.5.158:31521/mini02;Mode=Oracle
