--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,13 @@
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
-	
+
+		<!-- 메일전송 -->
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+		
 		<!-- JPA -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
