--- a/src/main/resources/static/erd/miniproject2_0.17.vuerd.json
+++ b/src/main/resources/static/erd/miniproject2_0.17.vuerd.json
@@ -3,9 +3,9 @@
     "version": "2.2.11",
     "width": 3000,
     "height": 3000,
-    "scrollTop": -814.4999955296524,
-    "scrollLeft": -304.16665458017553,
-    "zoomLevel": 0.9,
+    "scrollTop": -445.49999552965244,
+    "scrollLeft": -455.16665458017553,
+    "zoomLevel": 0.8,
     "show": {
       "tableComment": true,
       "columnComment": true,
@@ -2476,7 +2476,7 @@
           }
         ],
         "ui": {
-          "active": true,
+          "active": false,
           "left": 292.1879,
           "top": 800.1737,
           "zIndex": 15,
