--- a/src/main/resources/static/erd/miniproject2_0.20.vuerd.json
+++ b/src/main/resources/static/erd/miniproject2_0.20.vuerd.json
@@ -3,9 +3,9 @@
     "version": "2.2.11",
     "width": 3000,
     "height": 3000,
-    "scrollTop": -657.6666666666664,
-    "scrollLeft": -867.3333333333348,
-    "zoomLevel": 0.8,
+    "scrollTop": -547.6666666666664,
+    "scrollLeft": -1425.3333333333348,
+    "zoomLevel": 0.9,
     "show": {
       "tableComment": true,
       "columnComment": true,
@@ -2850,9 +2850,9 @@
         ],
         "ui": {
           "active": false,
-          "left": 1730.8606,
-          "top": 551.8052,
-          "zIndex": 15,
+          "left": 1752.1106,
+          "top": 546.8052,
+          "zIndex": 19,
           "widthName": 60,
           "widthComment": 60,
           "color": "#A0FFA4"
@@ -3480,9 +3480,9 @@
           "columnIds": [
             "74b2a5a4-f01a-4251-9a84-2cfa4ca93d46"
           ],
-          "x": 1980.206547265625,
-          "y": 743.8052,
-          "direction": "bottom"
+          "x": 1752.1106,
+          "y": 594.8052,
+          "direction": "left"
         },
         "constraintName": "fk_purchaseorder_to_review",
         "visible": true,
@@ -3497,8 +3497,8 @@
           "columnIds": [
             "e15630fd-97c4-48f2-80da-9cc63fa368b0"
           ],
-          "x": 1980.206547265625,
-          "y": 551.8052,
+          "x": 2001.456547265625,
+          "y": 546.8052,
           "direction": "top"
         },
         "end": {
@@ -3532,8 +3532,8 @@
           "columnIds": [
             "8faa72cf-9ee8-4886-b643-45944f64e365"
           ],
-          "x": 1730.8606,
-          "y": 647.8052,
+          "x": 1752.1106,
+          "y": 690.8052,
           "direction": "left"
         },
         "constraintName": "fk_item_to_review",
